--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Set up Miniconda
+        uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: '3.12.0'  # Adjust as needed
-      
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt  # If dependencies are needed
+          activate-environment: test-env
+          environment-file: environment.yml
+          auto-activate-base: false
 
       - name: Copy namoptions for this test
         run: cp AWS14_namoptions namoptions 
