--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,8 @@ dependencies:
   - xarray>=0.10.8
   - cftime>=1.6.2
   - f90nml>=1.4.4
-  - suncalc>=0.1.3
+  - pip:
+    - suncalc>=0.1.3
+    
   # Testing
   - pytest
